prevent content from shifting when words change

--- a/src/styles/personal-details.scss
+++ b/src/styles/personal-details.scss
@@ -3,46 +3,48 @@
 
 .personal-details-root {
     width: 90%;
-    margin: auto;
-
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
+    margin: 0 auto 2.5rem auto;
+    border-radius: 20px;
+    border: 2px solid rgba(119, 119, 119, 0.56);
 
     font-size: 1.5rem;
 
-    .container {
-        display: flex;
-        justify-content: center;
+    .outer-container {
+        display: grid;
     }
-    .box {
-        flex: 1;
-        display: flex;
-        align-items: center;
+
+    .container {
+        display: grid;
+        grid-template-columns: 1fr min-content 1fr;
     }
 
     .left {
         display: flex;
-        justify-content: right;
+        flex-direction: column;
+        justify-content: center;
         color: rgb(255, 255, 255);
         text-align: right;
+        overflow: hidden;
     }
 
     .center {
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        flex: 0;
         color: gray;
     }
 
     .right {
         display: flex;
-        justify-content: left;
+        flex-direction: column;
+        justify-content: center;
+        overflow: hidden;
     }
 
     .standalone {
         text-align: center;
         font-size: 1.2rem;
+        margin: 1rem;
     }
 
     .ibm {
@@ -50,6 +52,7 @@
         color: transparent; 
         background-image: linear-gradient(155deg, #0f62fe, 75%, #d0e2ff);
         font-weight: bold;
+        width: fit-content;
     }
 
     .iona {
@@ -57,15 +60,22 @@
         color: transparent; 
         background-image: linear-gradient(155deg, colors.$iona-maroon, 75%, colors.$iona-gold);
         font-weight: bold;
+        width: fit-content;
     }
 
 
-    @media (min-width: 934px) {
+    @media (min-width: 933px) {
         max-width: 1200px;
+        .outer-container {
+            grid-template-rows: repeat(3, 4rem);
+        }
     }
 
     @media (max-width: 933px) {
         max-width: 650px;
+        .outer-container {
+            grid-template-rows: repeat(3, 6rem);
+        }
     }
       
     .word {
@@ -74,6 +84,7 @@
         color: transparent; 
         background-image: linear-gradient(180deg, #ffffff, #717175);
         font-weight: bold;
+        width: fit-content; 
     }
       
     .fade {
